--- a/scss/sections/_find-us.scss
+++ b/scss/sections/_find-us.scss
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: center;
 
-    @include custom-min-mq(299.5) {
+    @include min-mq(xxs) {
         margin: 0 auto;
     }
 
@@ -50,14 +50,14 @@
 
 .findus__contact-container {
 
-    @include custom-between-mq(575.5, 991.5) {
+    @include between-mq (sm, lg) {
         justify-content: flex-start;
     }
 }
 
 .findus__openhour-container {
 
-    @include custom-between-mq(299.5, 575.5) {
+    @include between-mq (xxs, sm){
         padding-top: 2rem;
     }
 
@@ -87,7 +87,7 @@
 .findus__grid {
     text-align: center;
 
-    @include custom-min-mq (299.5) {
+        @include min-mq(xxs) {
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(2, auto);
@@ -102,7 +102,7 @@
 .openhour-grid--small {
     text-align: center;
 
-    @include custom-min-mq (299.5) {
+        @include min-mq(xxs) {
         display: none;
     }
 }
@@ -114,7 +114,7 @@
 .openhour-grid--large {
     display: none;
 
-    @include custom-min-mq (299.5) {
+        @include min-mq(xxs) {
         display: grid;
         grid-template-rows: repeat(7, 1fr);
         grid-template-columns: repeat(2, auto);
