--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -1,3 +1,12 @@
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-block: calc(1rem + 1.5vw);
+}
+
 .social-icons i {
     margin: 0.5rem 0.625rem 1.25rem 0.625rem;
 }
