--- a/scss/sections/_home.scss
+++ b/scss/sections/_home.scss
@@ -5,7 +5,7 @@
     padding-top: f.rem(70);
     position: relative;
 
-    @include custom-min-mq(375.5) {
+    @include min-mq (xs) {
         padding-top: 0;
     }
 }
@@ -26,7 +26,7 @@
     bottom: 1rem;
     left: 1rem;
 
-    @include min-mq(sm) {
+    @include min-mq (sm) {
         bottom: 5%;
         left: 3%;
     }
@@ -35,9 +35,7 @@
 .hero-text h5 {
     display: none;
 
-    @include custom-min-mq (375.5) {
+    @include min-mq (xs) {
         display: block;
     }
 }
-
-
