--- a/scss/sections/reservation-form/_form-photo.scss
+++ b/scss/sections/reservation-form/_form-photo.scss
@@ -4,14 +4,14 @@
 .reservation__photo {
     display: none;
 
-    @include custom-min-mq (400) {
+    @include min-mq (xs) {
         display: flex;
         justify-content: center;
         align-items: center;
         padding-bottom: 2rem;
     }
 
-    @include custom-min-mq (1249.5) {
+    @include min-mq(xl) {
         padding-bottom: 5.5rem;
         justify-content: flex-start;
     }
@@ -25,8 +25,8 @@
     border-radius: 0.375rem;
     padding: 0.25rem;
 
-@include min-mq(sm) {
+    @include min-mq(sm) {
         max-width: f.rem(600);
-        max-height: f.rem(400);    
+        max-height: f.rem(400);
     }
 }
