--- a/scss/style.css
+++ b/scss/style.css
@@ -844,30 +844,9 @@ section:not(:first-of-type) {
     padding-inline: 2rem;
   }
 }
-@media all and (min-width: 62em) {
+@media all and (min-width: 48em) {
   section:not(:first-of-type) {
-    max-width: 71.875rem;
-    padding-inline: 2.5rem;
-    padding-block: 5rem;
-  }
-}
-@media all and (min-width: 78.125em) {
-  section:not(:first-of-type) {
-    max-width: 93.75rem;
-    padding-inline: 2rem;
-    padding-block: 6rem 8.5rem;
-  }
-}
-
-section:not(:first-of-type) {
-  max-width: 100%;
-  padding-inline: 1rem;
-  margin-inline: auto;
-  padding-block: 2.5rem;
-}
-@media all and (min-width: 36em) {
-  section:not(:first-of-type) {
-    max-width: 50rem;
+    max-width: 59.375rem;
     padding-inline: 2rem;
   }
 }
@@ -886,30 +865,44 @@ section:not(:first-of-type) {
   }
 }
 
-section#findus {
-  max-width: 100%;
-  padding-inline: 1rem;
+section.findus {
+  padding-block: 2rem;
+}
+@media all and (min-width: 78.125em) {
+  section.findus {
+    padding-block: 3.5rem;
+  }
+}
+
+.findus-container {
+  display: flex;
+  flex-direction: column;
   margin-inline: auto;
-  padding-block: 1rem;
+}
+@media all and (min-width: 28.125em) {
+  .findus-container {
+    max-width: 26.5625rem;
+  }
 }
 @media all and (min-width: 36em) {
-  section#findus {
+  .findus-container {
+    flex-direction: row;
+    max-width: 37.5rem;
+  }
+}
+@media all and (min-width: 48em) {
+  .findus-container {
     max-width: 50rem;
-    padding-inline: 2rem;
   }
 }
 @media all and (min-width: 62em) {
-  section#findus {
-    max-width: 71.875rem;
-    padding-inline: 2.5rem;
-    padding-block: 5rem;
+  .findus-container {
+    max-width: 62.5rem;
   }
 }
 @media all and (min-width: 78.125em) {
-  section#findus {
+  .findus-container {
     max-width: 93.75rem;
-    padding-inline: 2rem;
-    padding-block: 2.5rem 3rem;
   }
 }
 
@@ -917,7 +910,12 @@ section#findus {
   padding-top: 4.375rem;
   position: relative;
 }
-@media all and (min-width: 28.125em) {
+@media all and (min-width: 21.875em) and (max-width: 28.0925em) {
+  #home {
+    padding-top: 0;
+  }
+}
+@media all and (min-width: 36em) {
   #home {
     padding-top: 0;
   }
@@ -949,7 +947,7 @@ section#findus {
 .hero-text h5 {
   display: none;
 }
-@media all and (min-width: 28.125em) {
+@media all and (min-width: 36em) {
   .hero-text h5 {
     display: block;
   }
@@ -987,11 +985,26 @@ section#findus {
     border-radius: 0 0 15px 15px;
   }
 }
+.small-menu {
+  max-width: 100%;
+  margin-inline: auto;
+}
+@media all and (min-width: 18.75em) {
+  .small-menu {
+    max-width: 18.75rem;
+  }
+}
+
 .large-menu {
-  max-width: 28.125rem;
+  max-width: 26.5625rem;
   margin-inline: auto;
 }
 @media all and (min-width: 36em) {
+  .large-menu {
+    max-width: 37.5rem;
+  }
+}
+@media all and (min-width: 48em) {
   .large-menu {
     max-width: 50rem;
   }
@@ -1237,6 +1250,7 @@ section#findus {
 .large-menu__item {
   display: grid;
   align-content: center;
+  min-height: 7.8125rem;
 }
 
 .large-menu__item p {
@@ -1318,14 +1332,24 @@ section#findus {
   display: grid;
   grid-template-rows: repeat(6, 1fr) repeat(2, auto);
   row-gap: 0.625rem;
-  max-width: 25rem;
+  max-width: 18.75rem;
   margin-inline: auto;
+}
+@media all and (min-width: 28.125em) {
+  .reservation__form {
+    max-width: 26.5625rem;
+  }
 }
 @media all and (min-width: 36em) {
   .reservation__form {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr) repeat(2, auto);
     gap: 1.25rem;
+    max-width: 37.5rem;
+  }
+}
+@media all and (min-width: 48em) {
+  .reservation__form {
     max-width: 50rem;
   }
 }
@@ -1338,7 +1362,12 @@ section#findus {
 }
 
 .reservation__form > div {
-  max-width: 25rem;
+  max-width: 18.75rem;
+}
+@media all and (min-width: 28.125em) {
+  .reservation__form > div {
+    max-width: 26.5625rem;
+  }
 }
 @media all and (min-width: 36em) {
   .reservation__form > div {
@@ -1421,7 +1450,7 @@ section#findus {
 }
 
 .reservation__photo img {
-  max-width: 25rem;
+  max-width: 26.5625rem;
   max-height: 25rem;
   width: 100%;
   height: auto;
@@ -1468,16 +1497,6 @@ section#findus {
   border-radius: 10px;
   float: right;
   cursor: pointer;
-}
-
-.findus {
-  display: flex;
-  flex-direction: column;
-}
-@media all and (min-width: 36em) {
-  .findus {
-    flex-direction: row;
-  }
 }
 
 .findus__logofont-container {
