--- a/scss/layouts/_reservation-form.scss
+++ b/scss/layouts/_reservation-form.scss
@@ -1,7 +1,8 @@
+@use '../partials/variables' as *;
 @use '../partials/functions' as f;
 @use '../partials/mixins' as *;
 
-// for menu & reservation
+// for menu & reservation & findus
 section:not(:first-of-type) {
     max-width: 100%;
     padding-inline: 1rem;
@@ -13,6 +14,11 @@ section:not(:first-of-type) {
         padding-inline: 2rem;
     }
 
+    @include min-mq (md) {
+        max-width: f.rem(950);
+        padding-inline: 2rem;
+    }
+
     @include min-mq (lg) {
         max-width: f.rem(1150);
         padding-inline: 2.5rem;
@@ -20,7 +26,7 @@ section:not(:first-of-type) {
     }
 
     @include min-mq (xl) {
-        max-width: f.rem(1500);
+        max-width: f.rem($mw-xl);
         padding-inline: 2rem;
         padding-block: 6rem 8.5rem;
     }
