--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -26,3 +26,12 @@ $black-1: rgb(0, 0, 0);
 $black-1a: rgba(0, 0, 0, 0.7);
 $black-2: rgb(33, 37, 41);
 $black-2a: rgba(33, 37, 41, 0.7);
+
+// max-width variables within container for veritcal alignment purpose in different screen size
+$mw-xxs:300;
+$mw-xs:425;
+$mw-sm:600;
+$mw-md:800;
+$mw-lg:1000;
+$mw-xl-menu:1300;
+$mw-xl:1500;
