--- a/scss/layouts/_find-us.scss
+++ b/scss/layouts/_find-us.scss
@@ -6,10 +6,11 @@ section.findus {
     padding-block: 2rem;
 
     @include min-mq (xl) {
-    padding-block: 3.5rem;
+        padding-block: 3.5rem;
     }
 }
 
+// for whole page vertical alignment
 .findus-container {
     display: flex;
     flex-direction: column;
