--- a/scss/layouts/_menus.scss
+++ b/scss/layouts/_menus.scss
@@ -1,4 +1,35 @@
+@use '../partials/variables' as *;
 @use '../partials/functions' as f;
 @use '../partials/mixins' as *;
 
-// for menu & reservation
+
+// for whole page vertical alignment
+.small-menu {
+    max-width: 100%;
+    margin-inline: auto;
+
+    @include min-mq (xxs) {
+        max-width: f.rem($mw-xxs);
+    }
+}
+
+.large-menu {
+    max-width: f.rem($mw-xs);
+    margin-inline: auto;
+
+    @include min-mq (sm) {
+        max-width: f.rem($mw-sm);
+    }
+
+    @include min-mq (md) {
+        max-width: f.rem($mw-md);
+    }
+
+    @include min-mq (lg) {
+        max-width: f.rem($mw-lg);
+    }
+
+    @include min-mq (xl) {
+        max-width: f.rem($mw-xl-menu);
+    }
+}
