--- a/scss/layouts/_reservation-form.scss
+++ b/scss/layouts/_reservation-form.scss
@@ -2,32 +2,37 @@
 @use '../partials/functions' as f;
 @use '../partials/mixins' as *;
 
-// for menu & reservation & findus
-section:not(:first-of-type) {
-    max-width: 100%;
-    padding-inline: 1rem;
+// for whole page vertical alignment
+.reservation__form {
+    max-width: f.rem($mw-xxs);
     margin-inline: auto;
-    padding-block: 2.5rem;
+
+    @include min-mq (xs) {
+        max-width: f.rem($mw-xs);
+    }
 
     @include min-mq (sm) {
-        max-width: f.rem(800);
-        padding-inline: 2rem;
+        max-width: f.rem($mw-sm);
     }
-
+    
     @include min-mq (md) {
-        max-width: f.rem(950);
-        padding-inline: 2rem;
+        max-width: f.rem($mw-md);
     }
 
-    @include min-mq (lg) {
-        max-width: f.rem(1150);
-        padding-inline: 2.5rem;
-        padding-block: 5rem;
+    // between lg and xl, showing 3 columns
+    @include between-mq (lg,xl) {
+        max-width: f.rem($mw-lg);
+    }
+}
+
+.reservation__form>div {
+    max-width: f.rem($mw-xxs);
+
+    @include min-mq (xs) {
+        max-width: f.rem($mw-xs);
     }
 
-    @include min-mq (xl) {
-        max-width: f.rem($mw-xl);
-        padding-inline: 2rem;
-        padding-block: 6rem 8.5rem;
+    @include min-mq (sm) {
+        max-width: 100%;
     }
 }
