--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -57,3 +57,25 @@
         @content;
     }
 }
+
+// h1 styles for menu and reservation
+@mixin h1-styles($margin-bottom) {
+    margin-bottom: $margin-bottom;
+    text-align: center;
+
+    @include min-mq(xs) {
+        margin-bottom: 2rem;
+    }
+
+    @include min-mq(md) {
+        margin-bottom: 2.5rem;
+    }
+
+    @include min-mq(lg) {
+        margin-bottom: 3rem;
+    }
+
+    @include min-mq(xl) {
+        margin-bottom: 3.5rem;
+    }
+}
