--- a/scss/sections/reservation-form/_form-heading.scss
+++ b/scss/sections/reservation-form/_form-heading.scss
@@ -1,10 +1,5 @@
 @use '../../partials/mixins' as *;
 
 #reservation h1 {
-    margin-bottom: 1.25rem;
-    text-align: center;
-
-    @include min-mq (xl) {
-        margin-bottom: 3rem;
-    }
+    @include h1-styles(1rem);
 }
