--- a/scss/layouts/_reservation-form.scss
+++ b/scss/layouts/_reservation-form.scss
@@ -7,17 +7,11 @@
     max-width: f.rem($mw-xxs);
     margin-inline: auto;
 
-    @include min-mq (xs) {
-        max-width: f.rem($mw-xs);
-    }
+    @include layout-mw(xs);
 
-    @include min-mq (sm) {
-        max-width: f.rem($mw-sm);
-    }
-    
-    @include min-mq (md) {
-        max-width: f.rem($mw-md);
-    }
+    @include layout-mw(sm);
+
+    @include layout-mw(md);
 
     // between lg and xl, showing 3 columns
     @include between-mq (lg,xl) {
@@ -28,9 +22,7 @@
 .reservation__form>div {
     max-width: f.rem($mw-xxs);
 
-    @include min-mq (xs) {
-        max-width: f.rem($mw-xs);
-    }
+    @include layout-mw(xs);
 
     @include min-mq (sm) {
         max-width: 100%;
