--- a/scss/layouts/_general.scss
+++ b/scss/layouts/_general.scss
@@ -4,32 +4,27 @@
 
 // styling the section container for menu, reservation and findus
 section:not(:first-of-type) {
-    max-width: 100%;
+    width: calc(100% - 2rem);
     margin-inline: auto;
-    padding-inline: 1rem;
     padding-block: 2.5rem;
 
     @include min-mq (xs) {
-        max-width: f.rem(800);
-        padding-inline: 2rem;
+        width: min(100% - 4rem, f.rem(800));
         padding-block: 3rem;
     }
 
     @include min-mq (md) {
-        max-width: f.rem(950);
-        padding-inline: 2rem;
+        width: min(100% - 4rem, f.rem(950));
         padding-block: 4rem;
     }
 
     @include min-mq (lg) {
-        max-width: f.rem(1150);
-        padding-inline: 2.5rem;
+        width: min(100% - 5rem, f.rem(1150));
         padding-block: 5rem;
     }
 
     @include min-mq (xl) {
-        max-width: f.rem($mw-xl); //mainly for reservation and findus
-        padding-inline: 3rem;
+        width: min(100% - 6rem, f.rem($mw-xl)); //mainly for reservation and findus
         padding-block: 6rem 8.5rem;
     }
 }
