--- a/scss/style.css
+++ b/scss/style.css
@@ -833,36 +833,31 @@ body {
 }
 
 section:not(:first-of-type) {
-  max-width: 100%;
+  width: calc(100% - 2rem);
   margin-inline: auto;
-  padding-inline: 1rem;
   padding-block: 2.5rem;
 }
 @media all and (min-width: 28.125em) {
   section:not(:first-of-type) {
-    max-width: 50rem;
-    padding-inline: 2rem;
+    width: min(100% - 4rem, 50rem);
     padding-block: 3rem;
   }
 }
 @media all and (min-width: 48em) {
   section:not(:first-of-type) {
-    max-width: 59.375rem;
-    padding-inline: 2rem;
+    width: min(100% - 4rem, 59.375rem);
     padding-block: 4rem;
   }
 }
 @media all and (min-width: 62em) {
   section:not(:first-of-type) {
-    max-width: 71.875rem;
-    padding-inline: 2.5rem;
+    width: min(100% - 5rem, 71.875rem);
     padding-block: 5rem;
   }
 }
 @media all and (min-width: 78.125em) {
   section:not(:first-of-type) {
-    max-width: 93.75rem;
-    padding-inline: 3rem;
+    width: min(100% - 6rem, 93.75rem);
     padding-block: 6rem 8.5rem;
   }
 }
