--- a/scss/layouts/_menus.scss
+++ b/scss/layouts/_menus.scss
@@ -8,18 +8,26 @@
     max-width: 100%;
     margin-inline: auto;
 
-    @include layout-mw(xxs);
+    @include min-mq (xxs) {
+        max-width: f.rem($mw-xxs);
+    }
 }
 
 .large-menu {
     max-width: f.rem($mw-xs);
     margin-inline: auto;
 
-    @include layout-mw(sm);
+    @include min-mq (sm) {
+        max-width: f.rem($mw-sm);
+    }
 
-    @include layout-mw(md);
+    @include min-mq (md) {
+        max-width: f.rem($mw-md);
+    }
 
-    @include layout-mw(lg);
+    @include min-mq (lg) {
+        max-width: f.rem($mw-lg);
+    }
 
     // optimum width for large menu
     @include min-mq (xl) {
