--- a/scss/layouts/_reservation-form.scss
+++ b/scss/layouts/_reservation-form.scss
@@ -7,14 +7,20 @@
     max-width: f.rem($mw-xxs);
     margin-inline: auto;
 
-    @include layout-mw(xs);
+    @include min-mq (xs) {
+        max-width: f.rem($mw-xs);
+    }
 
-    @include layout-mw(sm);
+    @include min-mq (sm) {
+        max-width: f.rem($mw-sm);
+    }
 
-    @include layout-mw(md);
+    @include min-mq (md) {
+        max-width: f.rem($mw-md);
+    }
 
     // between lg and xl, showing 3 columns
-    @include between-mq (lg,xl) {
+    @include between-mq (lg, xl) {
         max-width: f.rem($mw-lg);
     }
 }
@@ -22,7 +28,9 @@
 .reservation__form>div {
     max-width: f.rem($mw-xxs);
 
-    @include layout-mw(xs);
+    @include min-mq (xs) {
+        max-width: f.rem($mw-xs);
+    }
 
     @include min-mq (sm) {
         max-width: 100%;
