--- a/scss/sections/reservation-form/_form-structure.scss
+++ b/scss/sections/reservation-form/_form-structure.scss
@@ -16,19 +16,19 @@
 
 .reservation__form {
     display: grid;
-    grid-template-rows: repeat(6, 1fr) repeat(2, auto);
+    grid-template-rows: repeat(6, auto) repeat(2, auto);
     row-gap: f.rem(10);
 
     @include min-mq (sm) {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr) repeat(2, auto);
+        grid-template-rows: repeat(3, auto) repeat(2, auto);
         gap: f.rem(20);
     }
-    
+
     // between lg and xl, showing 3 columns
-    @include between-mq (lg,xl) {
+    @include between-mq (lg, xl) {
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr) repeat(2, auto);
+        grid-template-rows: repeat(2, auto) repeat(2, auto);
     }
 }
 
@@ -68,7 +68,7 @@
 }
 
 // between lg and xl, showing 3 columns
-@include between-mq (lg,xl) {
+@include between-mq (lg, xl) {
     .reservation__form--email {
         grid-area: 1 / 3 / 2 / 4;
     }
