--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -11,6 +11,7 @@ $yellow-2b: rgba(255, 251, 235, 0.7);
 $yellow-3: rgb(255, 239, 213);
 $pink-1: rgb(255, 192, 203);
 $pink-2: rgb(255, 182, 193);
+$red-1: rgb(255, 0, 0);
 $orange-1: rgb(255, 231, 204);
 $orange-2: rgb(248, 203, 166);
 $orange-2a: rgba(248, 203, 166, 0.7);
@@ -29,10 +30,10 @@ $black-2a: rgba(33, 37, 41, 0.7);
 
 
 // max-width variables within container for veritcal alignment purpose in different screen size
-$mw-xxs:300;
-$mw-xs:425;
-$mw-sm:600;
-$mw-md:800;
-$mw-lg:1000;
-$mw-xl-menu:1250;
-$mw-xl:1500;
+$mw-xxs: 300;
+$mw-xs: 425;
+$mw-sm: 600;
+$mw-md: 800;
+$mw-lg: 1000;
+$mw-xl-menu: 1250;
+$mw-xl: 1500;
