--- a/scss/sections/menus/_sm-menu-accordions.scss
+++ b/scss/sections/menus/_sm-menu-accordions.scss
@@ -27,6 +27,10 @@
     content: "\2212";
 }
 
+.small-menu__accordion h2 {
+    display: inline;
+}
+
 /* Style the accordion panel. Note: hidden by default */
 .small-menu__panel {
     padding: 0 0.5rem;
