--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -10,16 +10,17 @@ $yellow-2a: rgba(255, 251, 235, 0.95);
 $yellow-2b: rgba(255, 251, 235, 0.7);
 $yellow-3: rgb(255, 239, 213);
 $pink-1: rgb(255, 192, 203);
-$pink-2: rgb(255, 182, 193);
+$pink-2: rgb(255, 182, 193); //maybe for warning input field
 $red-1: rgb(255, 0, 0);
 $orange-1: rgb(255, 231, 204);
 $orange-2: rgb(248, 203, 166);
 $orange-2a: rgba(248, 203, 166, 0.7);
 $orange-3: rgb(229, 186, 115);
+$orange-4: orange;
 $brown-1: rgb(224, 177, 120);
 $brown-2: rgb(233, 205, 171);
 $brown-3: rgb(172, 113, 42);
-$grey-1: rgb(128, 128, 128);
+$grey-1: rgb(92, 92, 92);
 $grey-2: rgb(206, 212, 218);
 $grey-3: rgb(119, 119, 119);
 $grey-4: rgb(102, 102, 102);
