--- a/scss/style.css
+++ b/scss/style.css
@@ -557,6 +557,10 @@ textarea:focus {
   outline: 1px solid rgb(0, 0, 0);
 }
 
+.error-message {
+  color: rgb(255, 0, 0);
+}
+
 .reservation__form--button {
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
