added aria-expanded to collapsible navbar button, and aria-hidden to collapsible navbar content

--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -197,6 +197,11 @@ textarea:focus {
     outline: 1px solid $black-1;
 }
 
+.error-input {
+    border: 1px solid $red-1;
+    outline: 1px solid $red-1;
+}
+
 .error-message {
     color: $red-1;
 }
