--- a/scss/sections/_find-us.scss
+++ b/scss/sections/_find-us.scss
@@ -48,7 +48,7 @@
 
 .findus__openhour-container {
 
-    @include between-mq (xxs, sm){
+    @include between-mq (xxs, sm) {
         padding-top: 2rem;
     }
 
@@ -78,7 +78,7 @@
 .findus__grid {
     text-align: center;
 
-        @include min-mq(xxs) {
+    @include min-mq(xxs) {
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(2, auto);
@@ -90,10 +90,14 @@
     }
 }
 
+.contact__icon--location {
+    padding-left: 3px;
+}
+
 .openhour-grid--small {
     text-align: center;
 
-        @include min-mq(xxs) {
+    @include min-mq(xxs) {
         display: none;
     }
 }
@@ -105,7 +109,7 @@
 .openhour-grid--large {
     display: none;
 
-        @include min-mq(xxs) {
+    @include min-mq(xxs) {
         display: grid;
         grid-template-rows: repeat(7, 1fr);
         grid-template-columns: repeat(2, auto);
