revising default form values-1

--- a/scss/sections/reservation-form/_form-paragraph.scss
+++ b/scss/sections/reservation-form/_form-paragraph.scss
@@ -1,3 +1,7 @@
-.reservation__form--bottom-part p{
+.reservation__form--bottom-part p {
     margin-bottom: 1rem;
+}
+
+.error-message {
+    display: none;
 }
