form validation part 1

--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -181,7 +181,8 @@ hr {
 }
 
 .input-control,
-.textarea-control {
+.textarea-control,
+select {
     background-color: $white-1;
     border: 1px solid $grey-2;
 }
