--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -92,7 +92,8 @@ body {
 
 // reservation form
 .input-control,
-.textarea-control {
+.textarea-control,
+select {
     font-size: 1.3rem;
     font-weight: 400;
     line-height: 1.5;
