--- a/scss/sections/reservation-form/_form-inputs.scss
+++ b/scss/sections/reservation-form/_form-inputs.scss
@@ -6,3 +6,13 @@
     background-clip: padding-box;
     border-radius: 0.375rem;
 }
+
+.phone-number-container {
+    display: flex;
+    flex-direction: row;
+}
+
+select {
+    border-radius: 0.375rem;
+    margin-right: 0.25rem;
+}
