trial of guest no. using <select>

--- a/scss/style.css
+++ b/scss/style.css
@@ -1581,6 +1581,10 @@ select {
   margin-right: 0.25rem;
 }
 
+select#ppl {
+  width: 100%;
+}
+
 .textarea-control {
   display: block;
   width: 100%;
