--- a/scss/sections/reservation-form/_form-inputs.scss
+++ b/scss/sections/reservation-form/_form-inputs.scss
@@ -1,22 +1,9 @@
-.input-control {
+.input-control,
+.select-control {
     display: block;
     width: 100%;
     height: 3rem;
     padding: 0.375rem 0.75rem;
     background-clip: padding-box;
     border-radius: 0.375rem;
-}
-
-.phone-number-container {
-    display: flex;
-    flex-direction: row;
-}
-
-select {
-    border-radius: 0.375rem;
-    margin-right: 0.25rem;
-}
-
-select#ppl {
-    width: 100%;
 }
