added :focus to accordion button

--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -72,6 +72,10 @@ hr {
     &:after {
         color: $grey-3;
     }
+
+    &:focus {
+        outline: 2px solid $orange-3;
+    }
 }
 
 //buttons when the accordion panel is open
