--- a/scss/sections/menus/_sm-menu-accordions.scss
+++ b/scss/sections/menus/_sm-menu-accordions.scss
@@ -15,6 +15,10 @@
         content: '\002B';
         float: right;
     }
+
+    &:focus {
+        transition: 0s;
+    }
 }
 
 .small-menu__accordion:not(:first-of-type) {
