revised carousel - html, css, js and accessibility

--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -134,18 +134,18 @@ hr {
     }
 }
 
-.large-menu__tab-link {
-    color: $black-1;
-}
+// .large-menu__tab-link {
+//     color: $black-1;
+// }
 
-.large-menu__tab:hover .large-menu__tab-link {
-    color: $white-2;
-}
+// .large-menu__tab:hover .large-menu__tab-link {
+//     color: $white-2;
+// }
 
 
-.large-menu__tab--active .large-menu__tab-link {
-    color: $yellow-2;
-}
+// .large-menu__tab--active .large-menu__tab-link {
+//     color: $yellow-2;
+// }
 
 // menu content
 .large-food-menu {
