--- a/scss/sections/menus/_lg-menu-tabs.scss
+++ b/scss/sections/menus/_lg-menu-tabs.scss
@@ -18,11 +18,11 @@
     }
 }
 
-.large-menu__tab-link::after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    content: "";
-}
+// .large-menu__tab-link::after {
+//     position: absolute;
+//     top: 0;
+//     right: 0;
+//     bottom: 0;
+//     left: 0;
+//     content: "";
+// }
