--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -16,7 +16,7 @@ $orange-1: rgb(255, 231, 204);
 $orange-2: rgb(248, 203, 166);
 $orange-2a: rgba(248, 203, 166, 0.7);
 $orange-3: rgb(229, 186, 115);
-$orange-4: orange;
+$orange-4: rgb(255, 165, 0);
 $brown-1: rgb(174, 96, 0);
 $brown-2: rgb(233, 205, 171);
 $brown-3: rgb(172, 113, 42);
