--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -17,6 +17,7 @@ $orange-2: rgb(248, 203, 166);
 $orange-2a: rgba(248, 203, 166, 0.7);
 $orange-3: rgb(229, 186, 115);
 $orange-4: rgb(255, 165, 0);
+$orange-5: rgba(186, 90, 12, 0.75);
 $brown-1: rgb(174, 96, 0);
 $brown-2: rgb(224, 177, 120);
 $brown-3: rgb(233, 205, 171);
