--- a/src/googlefont/dancing-script.css
+++ b/src/googlefont/dancing-script.css
@@ -1,13 +1,20 @@
-@font-face {
+/* @font-face {
     font-family: 'Dancing Script';
     src: url('DancingScript-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-}
+} */
 
 @font-face {
     font-family: 'Dancing Script';
     src: url('DancingScript-Bold.woff') format('woff');
-    font-weight: bold;
+    font-weight: 700;
     font-style: normal;
 }
+
+/* @font-face {
+    font-family: 'Dancing Script';
+    src: url('DancingScript-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+} */
