--- a/src/googlefont/dancing-script.css
+++ b/src/googlefont/dancing-script.css
@@ -1,20 +1,8 @@
-/* @font-face {
-    font-family: 'Dancing Script';
-    src: url('DancingScript-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-} */
-
 @font-face {
     font-family: 'Dancing Script';
-    src: url('DancingScript-Bold.woff') format('woff');
-    font-weight: 700;
     font-style: normal;
+    font-weight: bold;
+    src: url('DancingScript-Bold.woff2') format('woff2'),
+        url('DancingScript-Bold.woff') format('woff');
+    font-display: swap;
 }
-
-/* @font-face {
-    font-family: 'Dancing Script';
-    src: url('DancingScript-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-} */
