amend the size of hero image on small screen

--- a/src/scss/sections/_home.scss
+++ b/src/scss/sections/_home.scss
@@ -23,6 +23,12 @@
     overflow-clip-margin: content-box;
     overflow: clip;
     vertical-align: middle;
+    height: auto;
+
+    @include custom-max-mq (449.5) {
+        width: f.rem(449.5);
+        max-width: f.rem(449.5);
+    }
 }
 
 .hero-text {
