Setting up Font Awesome icons as pseudo-elements

--- a/src/scss/non-critical-css/non-critical-style.scss
+++ b/src/scss/non-critical-css/non-critical-style.scss
@@ -1,4 +1,5 @@
 @use './partials/index' as *;
 @use '../common-partials/index' as *;
+@use './vendor/index' as *;
 @use './layouts/index' as *;
 @use './sections/index' as *;
