--- a/src/scss/non-critical-css/non-critical-style.css
+++ b/src/scss/non-critical-css/non-critical-style.css
@@ -66,8 +66,7 @@ textarea:focus {
 .reservation__form--button {
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
-  -webkit-box-shadow: 1px 1px 1px rgb(102, 102, 102);
-          box-shadow: 1px 1px 1px rgb(102, 102, 102);
+  box-shadow: 1px 1px 1px rgb(102, 102, 102);
 }
 .reservation__form--button:hover {
   outline: 3px solid rgb(255, 165, 0);
@@ -135,8 +134,7 @@ select {
   width: 1px;
   height: 1px;
   overflow: hidden;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 .skip-link:focus {
   position: fixed;
@@ -262,13 +260,8 @@ section.findus {
 }
 
 .findus-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   margin-inline: auto;
 }
 @media all and (min-width: 28.125em) {
@@ -279,10 +272,7 @@ section.findus {
 @media all and (min-width: 36em) {
   .findus-container {
     max-width: 37.5rem;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    flex-direction: row;
   }
 }
 @media all and (min-width: 48em) {
@@ -339,11 +329,9 @@ section.findus {
   width: auto;
   font-weight: bold;
   font-size: 1rem;
-  -webkit-transition: 0.6s ease;
   transition: 0.6s ease;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   border: 0;
   background-color: transparent;
@@ -362,7 +350,6 @@ section.findus {
   .small-menu__slideshow-button--next {
     top: 42%;
     font-size: 1.25rem;
-    -webkit-transition: 0.6s ease;
     transition: 0.6s ease;
     padding: 1rem;
   }
@@ -386,26 +373,14 @@ section.findus {
   margin: 0 3px;
   border-radius: 100%;
   display: inline-block;
-  -webkit-transition: background-color 0.6s ease;
   transition: background-color 0.6s ease;
   border: none;
 }
 
 /* Fading animation */
 .small-menu__slide--fade {
-  -webkit-animation-name: fade;
-          animation-name: fade;
-  -webkit-animation-duration: 3.5s;
-          animation-duration: 3.5s;
-}
-
-@-webkit-keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
+  animation-name: fade;
+  animation-duration: 3.5s;
 }
 
 @keyframes fade {
@@ -417,13 +392,8 @@ section.findus {
   }
 }
 .reservation {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 @media all and (min-width: 78.125em) {
   .reservation {
@@ -528,24 +498,16 @@ section.findus {
 }
 @media all and (min-width: 28.125em) {
   .reservation__photo {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     padding-bottom: 1.5rem;
   }
 }
 @media all and (min-width: 78.125em) {
   .reservation__photo {
     padding-bottom: 5.5rem;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    justify-content: flex-start;
   }
 }
 
@@ -610,32 +572,22 @@ section.findus {
 @media all and (min-width: 62em) {
   .findus__logofont-container {
     display: block;
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0 33.33%;
-            flex: 1 0 33.33%;
+    flex: 1 0 33.33%;
   }
 }
 @media all and (min-width: 78.125em) {
   .findus__logofont-container {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0 50%;
-            flex: 1 0 50%;
+    flex: 1 0 50%;
   }
 }
 
 .findus__contact-container,
 .findus__openhour-container {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 100%;
-          flex: 1 0 100%;
+  flex: 1 0 100%;
   width: 100%;
   margin: 0.5rem auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 @media all and (min-width: 18.75em) {
   .findus__contact-container,
@@ -646,33 +598,25 @@ section.findus {
 @media all and (min-width: 36em) {
   .findus__contact-container,
   .findus__openhour-container {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0 47.5%;
-            flex: 1 0 47.5%;
+    flex: 1 0 47.5%;
   }
 }
 @media all and (min-width: 62em) {
   .findus__contact-container,
   .findus__openhour-container {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0 33.33%;
-            flex: 1 0 33.33%;
+    flex: 1 0 33.33%;
   }
 }
 @media all and (min-width: 78.125em) {
   .findus__contact-container,
   .findus__openhour-container {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0 25%;
-            flex: 1 0 25%;
+    flex: 1 0 25%;
   }
 }
 
 @media all and (min-width: 62em) {
   .findus__contact-container {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    justify-content: flex-start;
   }
 }
 
@@ -683,9 +627,7 @@ section.findus {
 }
 @media all and (min-width: 62em) {
   .findus__openhour-container {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    justify-content: flex-end;
   }
 }
 
@@ -717,16 +659,11 @@ section.findus {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(2, auto);
-    -webkit-column-gap: 0.625rem;
-       -moz-column-gap: 0.625rem;
-            column-gap: 0.625rem;
+    -moz-column-gap: 0.625rem;
+         column-gap: 0.625rem;
     row-gap: 0;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
+    justify-content: center;
+    align-items: start;
     text-align: left;
   }
 }
@@ -756,39 +693,24 @@ section.findus {
     display: grid;
     grid-template-rows: repeat(7, 1fr);
     grid-template-columns: repeat(2, auto);
-    -webkit-column-gap: 0.625rem;
-       -moz-column-gap: 0.625rem;
-            column-gap: 0.625rem;
+    -moz-column-gap: 0.625rem;
+         column-gap: 0.625rem;
     row-gap: 0;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
+    justify-content: center;
+    align-items: start;
     text-align: left;
   }
 }
 
 footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   padding-block: calc(1rem + 1.5vw);
 }
 
 .social-icons i {
   margin: 0.5rem 0.625rem 1.25rem 0.625rem;
-}
-/*# sourceMappingURL=non-critical-style.css.map */
+}/*# sourceMappingURL=non-critical-style.css.map */
