browsersync of ncscss successful

--- a/src/scss/non-critical-css/partials/_colors.scss
+++ b/src/scss/non-critical-css/partials/_colors.scss
@@ -28,10 +28,12 @@
 .reservation__photo img {
     border: 1px solid $white-5;
     background-color: $white-1;
+    // background-color: gr;
 }
 
 .mandatory-field {
     color: $red-1;
+    // color: aqua;
 }
 
 .input-control {
