gulp build task done

--- a/src/css/scss-non-critical/non-critical-style.scss
+++ b/src/css/scss-non-critical/non-critical-style.scss
@@ -1,5 +1,5 @@
 @use './partials/index' as *;
-@use '../common-partials/index' as *;
+@use '../scss-common-partials/index' as *;
 @use './layouts/index' as *;
 @use './sections/index' as *;
 @use './vendor/index' as *;
